--- a/src/app/components/activity-graph/activity-graph.component.css
+++ b/src/app/components/activity-graph/activity-graph.component.css
@@ -11,7 +11,49 @@
   box-shadow: rgba(100, 100, 124, 0.25) 0px 6px 12px -2px,
     rgba(156, 156, 156, 0.3) 0px 3px 7px -3px;
 }
-.activity-graph-component {
-  flex: 1 1 auto;
-  align-self: auto;
+
+.week {
+  height: 100%;
+  flex-basis: 295px;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+.inner-week {
+  padding: 12px;
+}
+.week-container {
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+  height: 35%;
+}
+.display-week {
+  font-weight: bold;
+
+  color: #333333;
+  text-transform: uppercase;
+}
+.values-container > div {
+  width: 70px;
+  margin-right: 12px;
+}
+
+.value-separator {
+  border-right: 1px solid #dbdbdb;
+}
+
+.values-container {
+  padding: 15px 0;
+}
+.value-title {
+  color: grey;
+  font-size: 0.8em;
+}
+.value-value {
+  font-size: 1.3em;
+  padding-top: 5px;
+}
+.stationary-week-container {
+  height: 10%;
+  padding: 12px;
 }
