--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <div class="centerise h-100 w-100">
-  <div class="phone phone-shadow centerise">
-    <app-activity-graph class="w-100" [data]="data"></app-activity-graph>
-  </div>
+  <app-activity-graph [data]="data"></app-activity-graph>
 </div>
