--- a/src/app/components/activity-graph/activity-graph.component.html
+++ b/src/app/components/activity-graph/activity-graph.component.html
@@ -10,7 +10,7 @@
             <div class="pr-3 value-separator">
               <div class="value-title text-muted">Distance</div>
               <div class="value-value pt-1">
-                {{ week.distance + " km" }}
+                {{ week.distance / 1000 + " km" }}
               </div>
             </div>
             <div class="px-3 value-separator">
