further updates to graph to week scroll mapping

--- a/src/app/components/activity-graph/activity-graph.component.css
+++ b/src/app/components/activity-graph/activity-graph.component.css
@@ -36,6 +36,7 @@
 .week-container {
   display: flex;
   flex-direction: row;
+  position: relative;
   overflow: scroll;
   overflow-y: hidden;
   overflow-x: hidden;
