--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,10 @@ body {
   width: 100%;
   height: 100vh;
 }
+
+.centerise {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
