--- a/src/app/components/activity-graph/activity-graph.component.html
+++ b/src/app/components/activity-graph/activity-graph.component.html
@@ -8,7 +8,10 @@
   </div>
   <div>
     <div class="w-100 week-container" #weekContainer>
-      <div class="week" *ngFor="let week of activeData?.weeks">
+      <div
+        class="week"
+        *ngFor="let week of data[activityType[activeTab]].weeks"
+      >
         <div class="px-4 p-4 h-100">
           <div class="display-week">
             {{ week.displayDate }}
@@ -37,9 +40,11 @@
       </div>
     </div>
     <div class="px-4 info-container">
-      <div class="font-weight-bold text-dark">LAST 12 WEEKS</div>
+      <div class="fw-bold text-dark">LAST 12 WEEKS</div>
       <div class="text-muted">
-        {{ highestWeeklyDistance }}
+        <!-- {{
+          weeklyDistance(data[activityType[activeTab]].highestWeeklyDistance)
+        }} -->
       </div>
     </div>
   </div>
@@ -62,10 +67,10 @@
 
 <ng-template #tabTmpl let-tabData="data">
   <div
-    (click)="onTabSelect(tabData.id)"
+    (click)="activeTab = tabData.id"
     class="tab flex-fill centerise h-100"
-    [ngClass]="activeTab === tabData.id ? 'tabOn' : 'tabOff'"
+    [class.tabOn]="activeTab === tabData.id"
   >
-    <i class="fas" [ngClass]="tabData.icon"></i>
+    <i class="fas" [class]="tabData.icon"></i>
   </div>
 </ng-template>
