--- a/src/app/components/activity-graph/activity-graph.component.html
+++ b/src/app/components/activity-graph/activity-graph.component.html
@@ -42,7 +42,7 @@
     <div class="px-4 info-container">
       <div class="fw-bold text-dark">LAST 12 WEEKS</div>
       <div class="text-muted">
-        {{ weeklyDistance(null, true) }}
+        {{ highestWeeklyDistance() }}
       </div>
     </div>
   </div>
