minor styling changes on tab

--- a/src/app/components/activity-graph/activity-graph.component.css
+++ b/src/app/components/activity-graph/activity-graph.component.css
@@ -18,6 +18,7 @@
 
 .tab {
   cursor: pointer;
+  transition: 0.1s;
 }
 .tab > i {
   font-size: 1.5em;
@@ -27,10 +28,13 @@
 .tabOn {
   background-color: #ffffff;
   border-bottom: 3px solid #fc4c03;
+  font-size: 12px;
 }
 
 .tabOff {
   background-color: #f8f8f8;
+  opacity: 0.6;
+  font-size: 8px;
 }
 
 .shadow-deep {
