--- a/src/app/components/activity-graph/activity-graph.component.css
+++ b/src/app/components/activity-graph/activity-graph.component.css
@@ -1,5 +1,5 @@
 .activity-graph {
-  width: 290px;
+  width: 400px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -31,7 +31,7 @@
 }
 
 .tabOff {
-  background-color: #f8f8f8;
+  background-color: #f5f3f3;
   opacity: 0.6;
 }
 
@@ -45,8 +45,7 @@
 
 .week {
   height: 70%;
-  flex-basis: 295px;
-  flex-grow: 0;
+  width: 100%;
   flex-shrink: 0;
 }
 
