--- a/src/app/components/activity-graph/activity-graph.component.html
+++ b/src/app/components/activity-graph/activity-graph.component.html
@@ -7,7 +7,7 @@
     ></ng-container>
   </div>
   <div>
-    <div class="w-100 week-container" #weekContainer>
+    <div class="w-100 d-flex week-container-outer" #weekContainer>
       <div
         class="week"
         *ngFor="let week of data[activityType[activeTab]].weeks"
