cursor point now follows graph line

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div class="centerise h-100 w-100">
+  <!-- <div style="position: absolute; left: 0px; top: 0px; height: 100%">
+    <app-tools></app-tools>
+  </div> -->
+
   <app-activity-graph [data]="data"></app-activity-graph>
 </div>
