--- a/src/app/components/activity-graph/activity-graph.component.html
+++ b/src/app/components/activity-graph/activity-graph.component.html
@@ -40,7 +40,11 @@
       </div>
     </div>
     <div class="px-4 info-container">
-      <div class="fw-bold text-dark">LAST 12 WEEKS</div>
+      <div class="fw-bold text-dark">
+        {{
+          numberOfWeeks === 1 ? "LAST WEEK" : "LAST " + numberOfWeeks + " WEEKS"
+        }}
+      </div>
       <div class="text-muted">
         {{ highestWeeklyDistance() }}
       </div>
@@ -49,6 +53,48 @@
 
   <div #graphContainer class="w-100 grid-container">
     <svg #graph (mousedown)="onClick($event)">
+      <path
+        #path
+        [attr.stroke]="dynamicElementColor"
+        fill="none"
+        stroke-width="2"
+        stroke-linecap="round"
+      ></path>
+
+      <g *ngFor="let week of getActivity().weeks; let i = index">
+        <line
+          *ngIf="![0, mappedYPoints[0].legnth - 1].includes(i)"
+          [attr.stroke]="gridColor"
+          stroke-width="1"
+          [attr.x1]="leftLimit + weekWidth * i"
+          [attr.x2]="leftLimit + weekWidth * i"
+          [attr.y1]="cielLimit + floorLimit"
+          [attr.y2]="cielLimit"
+        ></line>
+        <g *ngIf="week.isBeginingOfMonth">
+          <text
+            [attr.x]="leftLimit + weekWidth * i - 10"
+            [attr.y]="floorLimit + 25"
+            font-size="8px !important"
+            fill="#A9A9A9"
+          >
+            {{ week.monthShort.toUpperCase() }}
+          </text>
+        </g>
+      </g>
+
+      <path #fill fill="url(#grad1)" stroke="none" stroke-width="0"></path>
+
+      <rect
+        fill="none"
+        stroke-width="1"
+        [attr.stroke]="gridColor"
+        [attr.x]="leftLimit"
+        [attr.y]="cielLimit"
+        [attr.width]="graphInnerWidth"
+        [attr.height]="floorLimit"
+      ></rect>
+
       <linearGradient id="grad1" x1="0%" y1="100%" x2="0%" y2="0%">
         <stop
           offset="0%"
@@ -59,6 +105,31 @@
           style="stop-color: rgb(252, 76, 3); stop-opacity: 0.4"
         />
       </linearGradient>
+      <line
+        #cursor
+        [attr.stroke]="dynamicElementColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        id="active-week-line"
+        [attr.x1]="this.rightLimit"
+        [attr.x2]="this.rightLimit"
+        [attr.y1]="cielLimit + floorLimit"
+        [attr.y2]="cielLimit"
+      ></line>
+      <circle
+        #cursorPoint
+        r="4"
+        [attr.fill]="dynamicElementColor"
+        id="cursor-point"
+      ></circle>
+      <circle
+        #cursorPointAccent
+        r="8"
+        [attr.cy]="mappedYPoints[mappedYPoints.length]"
+        [attr.fill]="dynamicElementColor"
+        fill-opacity="0.3"
+        id="cursor-point-accent"
+      ></circle>
     </svg>
   </div>
 </div>
