--- a/src/app/components/activity-graph/activity-graph.component.html
+++ b/src/app/components/activity-graph/activity-graph.component.html
@@ -53,6 +53,17 @@
 
   <div #graphContainer class="w-100 grid-container">
     <svg #graph (mousedown)="onClick($event)">
+      <g *ngFor="let week of utils.arrayOfLength(numberOfWeeks); let i = index">
+        <line
+          *ngIf="![0, mappedYPoints[0].length - 1].includes(i)"
+          [attr.stroke]="gridColor"
+          stroke-width="1"
+          [attr.x1]="leftLimit + weekWidth * i"
+          [attr.x2]="leftLimit + weekWidth * i"
+          [attr.y1]="cielLimit + floorLimit"
+          [attr.y2]="cielLimit"
+        ></line>
+      </g>
       <path #fill fill="url(#grad1)" stroke="none" stroke-width="0"></path>
 
       <rect
@@ -85,20 +96,11 @@
       ></path>
 
       <g *ngFor="let week of getActivity().weeks; let i = index">
-        <line
-          *ngIf="![0, mappedYPoints[0].length - 1].includes(i)"
-          [attr.stroke]="gridColor"
-          stroke-width="1"
-          [attr.x1]="leftLimit + weekWidth * i"
-          [attr.x2]="leftLimit + weekWidth * i"
-          [attr.y1]="cielLimit + floorLimit"
-          [attr.y2]="cielLimit"
-        ></line>
-
         <circle
           r="3"
           fill="white"
-          [attr.cy]="activeWeekMappedYPoints[i]"
+          style="cursor: pointer"
+          [attr.cy]="activeWeekMappedYPoints[i] || floorLimit + cielLimit"
           [attr.cx]="leftLimit + weekWidth * i"
           [attr.stroke]="dynamicElementColor"
           stroke-width="2"
@@ -121,7 +123,7 @@
         [attr.stroke]="dynamicElementColor"
         stroke-width="2"
         stroke-linecap="round"
-        id="active-week-line"
+        id="cursor"
         [attr.x1]="this.rightLimit"
         [attr.x2]="this.rightLimit"
         [attr.y1]="cielLimit + floorLimit"
@@ -133,12 +135,17 @@
         r="4"
         [attr.fill]="dynamicElementColor"
         id="cursor-point"
+        [attr.cx]="rightLimit"
+        [attr.cy]="floorLimit + cielLimit"
       ></circle>
 
       <circle
         #cursorPointAccent
         r="8"
-        [attr.cy]="mappedYPoints[mappedYPoints.length]"
+        [attr.cx]="rightLimit"
+        [attr.cy]="
+          mappedYPoints[mappedYPoints.length] || floorLimit + cielLimit
+        "
         [attr.fill]="dynamicElementColor"
         fill-opacity="0.3"
         id="cursor-point-accent"
