--- a/src/app/components/activity-graph/activity-graph.component.css
+++ b/src/app/components/activity-graph/activity-graph.component.css
@@ -7,6 +7,7 @@
   justify-content: flex-start;
   align-content: stretch;
   align-items: stretch;
+  font-size: 10px;
 }
 .activity-graph-shadow {
   box-shadow: rgba(100, 100, 124, 0.25) 0px 6px 12px -2px,
