Updates for StackBlitz fix

--- a/src/app/components/activity-graph/activity-graph.component.css
+++ b/src/app/components/activity-graph/activity-graph.component.css
@@ -55,7 +55,7 @@
 }
 
 .week-container-outer {
-  overflow-y: scroll;
+  overflow: hidden;
 }
 .week-container-outer::-webkit-scrollbar {
   display: none;
